# mega-eye

./: .gitmodules  README.md
dofu/: README.md  dofu.cabal  main.cpp  stack.yaml
dofu/app/: Main.hs
dofu/src/: Lib.hs
lib/csfml-2.4/: INSTALL_RECEIPT.json
lib/csfml-2.4/.brew/: csfml.rb
lib/csfml-2.4/lib/: libcsfml-audio.2.4.0.dylib  libcsfml-audio.2.4.dylib  libcsfml-audio.dylib  libcsfml-graphics.2.4.0.dylib  libcsfml-graphics.2.4.dylib  libcsfml-graphics.dylib  libcsfml-network.2.4.0.dylib  libcsfml-network.2.4.dylib  libcsfml-network.dylib  libcsfml-system.2.4.0.dylib  libcsfml-system.2.4.dylib  libcsfml-system.dylib  libcsfml-window.2.4.0.dylib  libcsfml-window.2.4.dylib  libcsfml-window.dylib
lib/sfml-2.4.2/: INSTALL_RECEIPT.json
lib/sfml-2.4.2/.brew/: sfml.rb
spine-c-haskell/src/: Spine.hs
spine-haskell/: README.md  spine-haskell.cabal
spine-haskell/src/: Spine.hs
spine-haskell/src/Raw/: Skeleton.hsc
spine-haskell/src/Spine/Raw/: Skeleton.hsc
spine-haskell/test/: Spec.hs
