name:                dofu
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dofu#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-dir:            assets
-- data-files:          img/look.jpg

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable dofu-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Paths_dofu
  build-depends: base
               --
               , SFML >= 2.3
               --
               , dofu
  -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --

test-suite dofu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dofu
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
