name:                spine-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spine-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md

library
    ghc-options: -Wall
    exposed-modules:
        Spine
        Spine.Raw.Skeleton
    hs-source-dirs:      src
    default-language:    Haskell2010
    include-dirs:
        spine-c/spine-c/include
    install-includes:
        spine/Animation.h
        spine/AnimationState.h
        spine/AnimationStateData.h
        spine/Atlas.h
        spine/AtlasAttachmentLoader.h
        spine/Attachment.h
        spine/AttachmentLoader.h
        spine/Bone.h
        spine/BoneData.h
        spine/BoundingBoxAttachment.h
        spine/Event.h
        spine/EventData.h
        spine/IkConstraint.h
        spine/IkConstraintData.h
        spine/MeshAttachment.h
        spine/PathAttachment.h
        spine/PathConstraint.h
        spine/PathConstraintData.h
        spine/RegionAttachment.h
        spine/Skeleton.h
        spine/SkeletonBinary.h
        spine/SkeletonBounds.h
        spine/SkeletonData.h
        spine/SkeletonJson.h
        spine/Skin.h
        spine/Slot.h
        spine/SlotData.h
        spine/TransformConstraint.h
        spine/TransformConstraintData.h
        spine/VertexAttachment.h
        spine/extension.h
        spine/spine.h
    extra-lib-dirs:
        /Users/jaiyalas/Project/mega-eye/spine-haskell/spine-c/build
    extra-libraries:
        spine-c
    -- pkgconfig-depends:
    --     spine-c >= 3.5
    build-depends:
        base           >= 4.7 && < 5
--
test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spine-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
